[tool.poetry]
name = "gibs-imagestat"
version = "0.2.0-alpha.22"
description = "Application capable of computing statistics on GIBS images"
authors = ["podaac-tva <podaac-tva@jpl.nasa.gov>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/podaac/gibs-imagestat"
exclude = ['contrib', 'docs', 'tests']
packages = [
    { include = "imagestat" },
]

[tool.poetry.dependencies]
python = "^3.9"
urllib3 = "^1.26.8"
Pillow = "^9.0.1"
requests = "^2.27.1"
numpy = "^1.22.2"
pandas = "^1.4.1"
beautifulsoup4 = "^4.10.0"
starlette = "^0.22"
xarray = "^2022.3.0"
fastapi = "^0.88"
uvicorn = "^0.20"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pylint = "^2.15.7"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
